--- a/src/css/webkit/store/wishlist.css
+++ b/src/css/webkit/store/wishlist.css
@@ -36,7 +36,7 @@
 */
 
 .gQWgnAxVrOM- .jfAmlCmNzHQ- {
-    margin: 16px 0 0;
+    margin: 0;
     padding: 12px;
     border-radius: 8px 8px 0 0;
     background-color: rgb(var(--st-color-2));
